corrects dropdown alignment & adds hover arrow to aggregate client cases links

--- a/src/modules/customizable-menu.module/module.css
+++ b/src/modules/customizable-menu.module/module.css
@@ -1,5 +1,4 @@
 .custom-menu__top {
-  background-color: red;
   display: flex;
   gap: 1.5rem;
 }
@@ -154,7 +153,7 @@
   border: none;
   display: none;
   height: 0;
-  left: 0;
+  left: -16rem;
   position: absolute;
   text-align: left;
   text-transform: none;
@@ -184,11 +183,12 @@
   list-style: none;
   margin: 4px auto 0;
   padding: 2.5rem 3.25rem;
-  width: clamp(800px, 80vw, 1440px);
+  width: clamp(800px, 100vw, 1440px);
 }
 
 .menu__item--products > .menu__submenu--level-2 {
   flex-direction: column-reverse;
+  left: 0;
 }
 
 .hs-menu-depth-1 {
@@ -217,24 +217,25 @@
 
 /* Keeps the first menu item's drop down menu aligned to the left of the top level menu item */
 
-.menu__item--depth-1:first-child .menu__submenu--level-2 {
+.menu__item--depth-1:first-of-type .menu__submenu--level-2 {
   transform: unset;
+  left: 0;
 }
 
 .menu__item--depth-1:nth-child(4) .menu__submenu--level-2 {
-  transform: translateX(-14%);
+  transform: translateX(0);
 }
 
 .menu__item--depth-1:nth-child(5) .menu__submenu--level-2 {
-  transform: translateX(-27%);
+  transform: translateX(-13%);
 }
 
 .menu__item--depth-1:nth-child(6) .menu__submenu--level-2 {
-  transform: translateX(-37%);
+  transform: translateX(-22.5%);
 }
 
 .menu__item--depth-1:nth-child(7) .menu__submenu--level-2 {
-  transform: translateX(-46%);
+  transform: translateX(-31.75%);
 }
 
 .menu__submenu--main-link {
@@ -287,6 +288,21 @@
 .client-cases > .menu__item--depth-2 > .menu__link:hover {
   border-color: #396D78;
   color: #396D78 !important;
+}
+
+.client-cases > .menu__item--depth-2 > .menu__link > span:after {
+  background: url('https://20191855.fs1.hubspotusercontent-na1.net/hubfs/20191855/icons/arrow_right_teal.png') no-repeat;
+  content: '';
+  display: inline-block;
+  height: 1.5rem;
+  opacity: 0;
+  transform: translate(42.5%, 42.5%);
+  transition: opacity 0.2s ease-out;
+  width: 2rem;
+}
+
+.client-cases > .menu__item--depth-2 > .menu__link:hover > span:after {
+  opacity: 1;
 }
 
 .menu__submenu .menu__link--client-cases {
